Fix the shadow previews not showing on page navigation

--- a/docs/static/css/components/docs/shadow-preview.scss
+++ b/docs/static/css/components/docs/shadow-preview.scss
@@ -3,10 +3,12 @@
 .preview {
   display: flex;
   align-items: center;
-  font-family: 'Roboto Mono', monospace;
-  width: 1.5em;
-  height: 1.5em;
+  justify-content: center;
+  width: 5em;
+  padding: 0.25em 0.5em;
   border-radius: 0.25em;
+  font-weight: 300;
+  font-size: 0.8em;
   background: $background;
 }
 
